--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
+
+    <script src="//at.alicdn.com/t/font_2814610_akdnj3avdmu.js"></script>
 </head>
 <body>
   <div id="app"></div>
