--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
-
+    <link href="https://cdn.bootcdn.net/ajax/libs/prism/1.24.1/themes/prism-okaidia.css" rel="stylesheet">
     <script src="//at.alicdn.com/t/font_2814610_ue61glnbt4.js"></script>
 </head>
 <body>
